--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="#profil">Profil</a>
-                    <a class="nav-item nav-link" href="#">Pendidikan</a>
-                    <a class="nav-item nav-link" href="#">Pelatihan</a>
-                    <a class="nav-item nav-link" href="#">Skill</a>
+                    <a class="nav-item nav-link" href="#pendidikan">Pendidikan</a>
+                    <a class="nav-item nav-link" href="#pelatihan">Pelatihan</a>
+                    <a class="nav-item nav-link" href="#skill">Skill</a>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
             </div>
             <div class="row justify-content-center">
               <div class="col-md-11 text-center">
-                  <p class="kalimat">Nama saya Nur hikma L, lahir di Desa Tampo, 23 Mei 2001, saya merupakan anak ke dua dari tiga bersaudara, buah hati dari pasangan Lahaning dan Darmawati. Saya mempunyai kakak laki-laki, dia lulusan dari jurusan Farmasi Universitas hasanuddin, dan adek perempuan yang sekarang lanjut SMAN di Pondok pesantren. Orang-orang biasa memanggil saya dengan sebutaan Imma atau Hikma. Saya orangnya cukup sulit untuk bersosialisasi dengan lingkungan baru. saya sangat senang saat membantu orang. Saya juga sangat suka dalam dunia pertanian, itulah sebabnya saya mengambil jurusan Agribisnis, Fakultas Pertanian di Universitas Hasanuddin. Saya suka dunia pertanian karena kedua orang tua saya adalah seorang petani, dari kecil mereka sudah mengajarkan kami bagaimana cara Bertani yang baik dan benar.</p>
+                  <p class="kalimat">Nama saya Nur Hikma L, lahir di Desa Tampo, 23 Mei 2001, saya merupakan anak ke dua dari tiga bersaudara, buah hati dari pasangan Lahaning dan Darmawati. Saya mempunyai kakak laki-laki, dia lulusan dari jurusan Farmasi Universitas hasanuddin, dan adek perempuan yang sekarang lanjut SMAN di Pondok pesantren. Orang-orang biasa memanggil saya dengan sebutan Imma atau Hikma. Saya orangnya cukup sulit untuk bersosialisasi dengan lingkungan baru. saya sangat senang saat membantu orang. Saya juga sangat suka dalam dunia pertanian, itulah sebabnya saya mengambil jurusan Agribisnis, Fakultas Pertanian di Universitas Hasanuddin. Saya suka dunia pertanian karena kedua orang tua saya adalah seorang petani, dari kecil mereka sudah mengajarkan kami bagaimana cara Bertani yang baik dan benar.</p>
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@
         </div>
 
         <!-- Pendidikan -->
-        <section class="pendidikan">
+        <section class="pendidikan" id="pendidikan">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col text-center">
@@ -124,28 +124,28 @@
                 <div class="row justify-content-center">
                     <div class="col-md-5 warna2">
                         <h3>Pendidikan Sekolah Dasar</h3>
-                        <p>Saya mulai menempu Pendidikan sekolah dasar di SDN 157 Cakke, kecamatan Anggeraja, Kabupaten Enrekang pada tahun 2008 dan lulus pada tahun 2013. Semasa Pendidikan saya di sekolah dasar peringkat saya selalu 10,11 dan 12, itu karena saya lebih suka praktek dari pada teori. </p>
+                        <p>Saya mulai menempu Pendidikan sekolah dasar di SDN 157 Cakke, kecamatan Anggeraja, Kabupaten Enrekang pada tahun 2008 dan lulus pada tahun 2013. Semasa Pendidikan saya di sekolah dasar peringkat saya selalu 10,11 dan 12, itu karena saya lebih suka praktek dari pada teori.</p>
                     </div>
                     <div class="col-md-5 warna1">
-                        <h3>Pendidikan Sekolah Dasar</h3>
+                        <h3>Pendidikan Sekolah Menengah Pertama</h3>
                         <p>Saya menempu Pendidikan sekolah menengah pertama di SMPN 1 Anggeraja, Kabupaten Enrekang. Saya mulai sekolah pada tahun 2013 dan lulus di tahun 2016. Semasa SMPN saya sering mewakili kelas saya untuk pertandingan olahraga antar kelas seperti volley, Tarik tambang, dll. Dan kelas saya sering juarah.</p>
                     </div>
                 </div>
 
                 <div class="row justify-content-center">
                     <div class="col-md-5 warna1">
-                        <h3>Pendidikan Sekolah Dasar</h3>
+                        <h3>Pendidikan Sekolah Menengah Atas</h3>
                         <p>Saya menempu Pendidikan sekolah menengah atas di SMAN 1 ENREKANG. Saya masuk pada tahun 2016 dan lulus di tahun 2019. Semasa saya di SMAN saya juga selalu mewakili kelas untuk pertandingan olahraga. Saya juga perna ikut mewakili sekolah dalam ertandigan Volly.</p>
                     </div>
                     <div class="col-md-5 warna2">
-                        <h3>Pendidikan Sekolah Dasar</h3>
+                        <h3>Pendidikan Perguruan Tinggi</h3>
                         <p>Sekarang ini, saya berkuliah di Universitas Hasanuddin, Makassar,Sulawesi Selatan. Di terima pada jurusan Agribisnis melalui jalur MANDIRI.</p>
                     </div>
                 </div>
             </div>
         </section>
         
-        <section class="pelatihan">
+        <section class="pelatihan" id="pelatihan">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col text-center">
@@ -163,7 +163,7 @@
             </div>
         </section>
 
-        <section class="skill">
+        <section class="skill" id="skill">
             <div class="container">
                 <div class="row justify-content-center">
                     <h1>Keterampilan</h1>
